Bug 464452 - Sticky keys: Lock option doesn't work on Wayland
Summary: Sticky keys: Lock option doesn't work on Wayland
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_access (other bugs)
Version First Reported In: 5.26.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gunnar Schmidt
URL:
Keywords: accessibility, wayland-only
Depends on:
Blocks: 444335
  Show dependency treegraph
 
Reported: 2023-01-18 13:54 UTC by Nicolas Fella
Modified: 2023-11-23 08:17 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2023-01-18 13:54:20 UTC
Pressing a modifier key twice should lock it. Pressing it again should unlock it.

Follow-up from https://bugs.kde.org/show_bug.cgi?id=444335
Comment 1 Bug Janitor Service 2023-05-07 20:55:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4069
Comment 2 Vlad Zahorodnii 2023-11-23 08:17:03 UTC
Git commit d4127d07fd55c342d28fa7a6b66b460473c5d00c by Vlad Zahorodnii, on behalf of Nicolas Fella.
Committed on 23/11/2023 at 09:17.
Pushed by vladz into branch 'master'.

Implement locking sticky keys on Wayland

When pressing a latched modifier a second time lock it

When pressing a locked modifier release it

M  +1    -0    autotests/integration/CMakeLists.txt
A  +180  -0    autotests/integration/sticky_keys_test.cpp     [License: GPL(v2.0+)]
M  +38   -6    src/plugins/stickykeys/stickykeys.cpp
M  +2    -0    src/plugins/stickykeys/stickykeys.h
M  +48   -0    src/xkb.cpp
M  +1    -0    src/xkb.h

https://invent.kde.org/plasma/kwin/-/commit/d4127d07fd55c342d28fa7a6b66b460473c5d00c