Implement locking sticky keys on Wayland

When pressing a latched modifier a second time lock it

When pressing a locked modifier release it

BUG: 464452